@@ -1250,17 +1250,14 @@ If STATUS-DATUM is already in DATA-VAR, return nil. If not, return t."
 (defun twittering-tinyurl-replace-at-point ()
   "Replace the url at point with a tiny version."
   (interactive)
-  (let* ((url-bounds (bounds-of-thing-at-point 'url))
-	 (url (thing-at-point 'url))
-	 (newurl (if url
-		     (twittering-tinyurl-get url)
-		   nil)))
-    (if newurl
-	(save-restriction
-	  (narrow-to-region (car url-bounds) (cdr url-bounds))
-	  (delete-region (point-min) (point-max))
-	  (insert newurl)))
-    newurl))
+  (let ((url-bounds (bounds-of-thing-at-point 'url)))
+    (when url-bounds
+      (let ((url (twittering-tinyurl-get (thing-at-point 'url))))
+	(when url
+	  (save-restriction
+	    (narrow-to-region (car url-bounds) (cdr url-bounds))
+	    (delete-region (point-min) (point-max))
+	    (insert url)))))))
 
 ;;;
 ;;; Commands
